# constcodegen

./: Cargo.toml  LICENSE  README.md
examples/: constants.toml  options.toml
src/: constants.rs  expr.rs  format_value.rs  functions.rs  main.rs  options.rs  template.rs  value.rs
