[package]
name = "constcodegen"
version = "0.1.0"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"
serde_json = "1.0"

lazy_static = "1.4.0"
regex = "1.3"
eval = "0.4.3"

structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"

log = "0.4"
pretty_env_logger = "0.3"
